added a final alert

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         alert("Your profit is $" + profit);
         console.log("Your profit is $" + profit);
-        alert("Your ebay fees are $" + ebayFee);
+        alert("Your ebay fees are $" + ebayFee + " and your shipping fees are $" + shippingCost);
 
     </script>
 </body>
